- add video grid

--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -1,4 +1,5 @@
 {
   "hello": "Привіт світ",
-  "createGame": "Створити Гру"
+  "createGame": "Створити Гру",
+  "waitingForPlayers": "Очікування гравців"
 }
