--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
   "hello": "Hello world",
-  "createGame": "Create Game"
+  "createGame": "Create Game",
+  "waitingForPlayers": "Waiting for players"
 }
