- add game creating - fix types files

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "hello": "Hello world",
   "createGame": "Create Game",
-  "waitingForPlayers": "Waiting for players"
+  "waitingForPlayers": "Waiting for players",
+  "loading": "Loading"
 }
