--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -1,5 +1,6 @@
 {
   "hello": "Привіт світ",
   "createGame": "Створити Гру",
-  "waitingForPlayers": "Очікування гравців"
+  "waitingForPlayers": "Очікування гравців",
+  "loading": "Завантаження"
 }
