Додано новий пакет framer-motion, оновлено локалізацію для відео меню, а також внесено зміни в компоненти RoleIcon, GameChat, PlayerPanel, VideoMenu та інші для покращення UI та функціональності. Виправлено помилки в типах ролей та стилях.
add RoleCard and some animations

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -42,5 +42,10 @@
     "download": "Upload image",
     "effectsTitle": "Effects",
     "backgroundsTitle": "Backgrounds"
+  },
+
+  "videoMenu": {
+    "doGM": "Do GM",
+    "kill": "Kill"
   }
 }
