--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -44,5 +44,10 @@
     "download": "Завантажити зображення",
     "effectsTitle": "Ефекти",
     "backgroundsTitle": "Фони"
+  },
+
+  "videoMenu": {
+    "doGM": "Зробити ГМ",
+    "kill": "Вбити"
   }
 }
