--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -21,6 +21,19 @@
   "online": "онлайн",
   "logout": "Вийти",
 
+  "auth": {
+    "login": "Увійти",
+    "nickname": "Псевдоним",
+    "signUp": "Зареєструватися",
+    "enterCredentials": "Будь ласка, введіть свій логін та пароль:",
+    "fillFields": "Будь ласка, заповніть поля нижче:",
+    "existingAccount": "Вже маєте обліковий запис?",
+    "newPlayer": "Новий гравець?",
+    "createAccount": "Створити обліковий запис",
+    "password": "Пароль",
+    "repeatPassword": "Повторіть пароль"
+  },
+
   "settings": {
     "title": "Налаштування",
     "language": "Мова інтерфейсу"
@@ -73,4 +86,3 @@
     "restartVote": "Перезапустити голосування"
   }
 }
-
