--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -22,11 +22,9 @@
   "logout": "Вийти",
 
   "auth": {
-    "login": "Увійти",
+    "login": "Вхід",
     "nickname": "Псевдоним",
-    "signUp": "Зареєструватися",
-    "enterCredentials": "Будь ласка, введіть свій логін та пароль:",
-    "fillFields": "Будь ласка, заповніть поля нижче:",
+    "signUp": "Реєстрація",
     "existingAccount": "Вже маєте обліковий запис?",
     "newPlayer": "Новий гравець?",
     "createAccount": "Створити обліковий запис",
