--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -53,7 +53,14 @@
     "restart": "Перезапустити",
     "night": "Ніч",
     "day": "День",
-    "wakeUp": "Прокидайтеся:"
+    "wakeUp": "Прокидайтеся:",
+    "nightMode": {
+      "title": "Настала ніч",
+      "playerSubtitle": "Місто спить, але зло не дрімає...",
+      "info1": "Відео приховані під час ночі",
+      "info2": "Тільки ГМ може бачити та керувати грою",
+      "info3": "Чекайте на ранок, щоб продовжити"
+    }
   },
 
   "speaker": {
