feat: refactor video configuration and management components for improved settings handling refactor game page UI change video settings flow - save video configurations improve cards animation remove vote section (need to improve it)

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -130,6 +130,8 @@
     "disableMockStreams": "Disable Mock Streams",
     "muteAll": "Mute All",
     "unmuteAll": "Unmute All",
+    "restartGame": "Restart Game",
+    "videoSettings": "Video Settings",
     "leaveGame": "Leave Game"
   }
 }
