feat: restructure PlayerPanel and GameInfoSection components for improved role display and interaction

--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -53,6 +53,8 @@
     "restart": "Перезапустити",
     "night": "Ніч",
     "day": "День",
+    "role": "Роль",
+    "timer_placeholder": "Таймер з'явиться тут",
     "wakeUp": "Прокидайтеся:",
     "nightMode": {
       "title": "Настала ніч",
