--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -51,6 +51,8 @@
     "restart": "Restart",
     "night": "Night",
     "day": "Day",
+    "role": "Role",
+    "timer_placeholder": "Timer will appear here",
     "wakeUp": "Wake up:",
     "nightMode": {
       "title": "Night Time",
