feat: enhance voting interface with improved styles and animations; Fix night overlay

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -72,7 +72,8 @@
 
   "vote": {
     "voting": "Voting",
-    "startVoting": "Start Voting"
+    "startVoting": "Start Voting",
+    "voteList": "Vote List"
   },
 
   "videoConfig": {
