feat: Implement core game functionality, including game creation, game page, and associated modals and components.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,6 +18,19 @@
   "playersCount_other": "{{count}} players",
   "online": "online",
   "logout": "Logout",
+  "enterGamePassword": "Enter Game Password",
+  "password": "Password",
+  "privateGameDescription": "This is a private game. Please enter the password to join.",
+  "incorrectPassword": "Incorrect password. Please try again.",
+  "verifying": "Verifying...",
+  "confirm": "Confirm",
+  "cancel": "Cancel",
+  "create": "Create",
+  "privateGame": "Private Game",
+  "enterPassword": "Enter Password",
+  "maxPlayers": "Max Players",
+  "mafiaCount": "Mafia Count",
+  "additionalRoles": "Additional Roles",
 
   "auth": {
     "login": "Login",
