--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -20,10 +20,23 @@
   "playersCount_many": "{{count}} гравців",
   "online": "онлайн",
   "logout": "Вийти",
+  "enterGamePassword": "Введіть пароль гри",
+  "password": "Пароль",
+  "privateGameDescription": "Це приватна гра. Введіть пароль, щоб приєднатися.",
+  "incorrectPassword": "Неправильний пароль. Спробуйте ще раз.",
+  "verifying": "Перевірка...",
+  "confirm": "Підтвердити",
+  "cancel": "Скасувати",
+  "create": "Створити",
+  "privateGame": "Приватна гра",
+  "enterPassword": "Введіть пароль",
+  "maxPlayers": "Макс. гравців",
+  "mafiaCount": "Кількість мафії",
+  "additionalRoles": "Додаткові ролі",
 
   "auth": {
     "login": "Вхід",
-    "nickname": "Псевдоним",
+    "nickname": "Псевдонім",
     "signUp": "Реєстрація",
     "existingAccount": "Вже маєте обліковий запис?",
     "newPlayer": "Новий гравець?",
